# moneyloverc

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  moneylover.py  moneyloverc.go  pyproject.toml
cmd/moneylover/: main.go
cmd/moneylover/cobracmd/: login.go  root.go  txs.go  wallets.go
src/moneyloverc/: __main__.py
src/moneyloverc/domain/: __init__.py  entities.py  enums.py  repositories.py  services.py
